Fix arrows in textarea on IE11

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -356,6 +356,7 @@
       textarea {
         display: inline-block;
         margin-top: 1rem;
+        overflow: auto;
       }
     }
   }
