--- a/app/styles/layout/_modals.scss
+++ b/app/styles/layout/_modals.scss
@@ -7,6 +7,9 @@
     max-height: 405px;
     overflow: auto;
   }
+  textarea {
+    overflow: auto;
+  }
 }
 
 .modal-header {
